--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "axios": "^1.7.7",
+    "chart.js": "^4.4.4",
+    "chartjs": "^0.3.24",
     "framer-motion": "^11.11.0",
     "next": "14.2.14",
     "react": "^18",
